...
        android:layout_height="wrap_content"
        android:background="@color/tg_chat_header_bg"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"/>

    <ScrollView
        android:id="@+id/buttons_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/buttons_large_view"
            android:layout_width="match_parent"
...
                android:text=""
                android:background="@null"
                android:textColor="@null"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_export_savedata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rounded_orange_dark_bg"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/layout___export_tox_savedata_unsecure"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/dummy_0001a"
                android:layout_width="match_parent"
...
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:text="@string/restore_password_button"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_import_savedata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rounded_red_dark_bg"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
...
